<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mealplan_details">
    <View
        android:id="@+id/rectangle_1"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/vertical_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="91dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/rectangle_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_1"
        android:gravity="center">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="left|center"
            android:background="@drawable/back_foreground"
            android:onClick="goback"
            >
        </ImageButton>

        <TextView
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/home"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="right|center"
            android:background="@drawable/home_foreground"
            android:onClick="goHome"
            >

        </ImageButton>

    </LinearLayout>


    <View
        android:id="@+id/rectangle_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-80dp"
        android:background="@drawable/oneradisrangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_1"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/text3"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/meal_plan_details"
        android:textColor="@color/yellow"
        android:textSize="25sp"
        android:textStyle="normal"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:fillViewport="true"
        android:minHeight="400dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_1">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rectangle_1">

            <LinearLayout
                android:id="@+id/Earlymorning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shadow"
                android:clickable="true"
                android:gravity="left|center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Earlymorning Snack"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_brown"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"

                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtEarlymorning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:text="@string/breakfast_dec"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/dec"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/breakfask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shadow"
                android:clickable="true"
                android:gravity="left|center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_brown"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtbreakfask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:text="@string/breakfast_dec"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/dec"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/amSnack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shadow"
                android:clickable="true"
                android:gravity="left|center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="AM Snack"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_brown"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtamSnack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:text="@string/pm_snack_dec"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/dec"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shadow"
                android:clickable="true"
                android:gravity="left|center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lunch"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_brown"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtlunch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:text="@string/lunch_dec"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/dec"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/pmSnack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shadow"
                android:clickable="true"
                android:gravity="left|center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pm_snack"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_brown"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtpmsnack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:text="@string/pm_snack_dec"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/dec"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shadow"
                android:clickable="true"
                android:gravity="left|center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dinner"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_brown"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtdinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:text="@string/dinner_dec"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/dec"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/EveningSnack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shadow"
                android:clickable="true"
                android:gravity="left|center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/evening_snack"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_brown"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txteveninigSnack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:text="@string/evening_snack_dec"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/dec"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/contain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shadow"
                android:clickable="true"
                android:gravity="left|center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Contains"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_brown"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtcontain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:text="@string/evening_snack_dec"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/dec"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>